[AutoDiff] Fix externally-defined JVP/VJP resolution.

Previously, `SILFunctionBuilder` created `SILDifferentiableAttr` with the
expected mangled JVP/VJP names even if they weren't specified in the original
`@differentiable` attribute, when the original function is from a different
SIL module. This enabled the differentiation pass to find externally defined
JVP/VJPs.

However, this logic was hacky/unreliable. Now, `SILFunctionBuilder` simply
propagates JVP/VJP names if they are specified in the original `@differentiable`
attribute. The differentiation pass then declares external JVP/VJP functions
when the original function is an external declaration.

Resolves SR-9791. Done with guidance and initial work from @rxwei.