include/swift/SIL/SILFunctionBuilder.h
@@ -98,10 +98,6 @@ class SILFunctionBuilder {
                  SILFunction *InsertBefore = nullptr,
                  const SILDebugScope *DebugScope = nullptr);
 
-  // SWIFT_ENABLE_TENSORFLOW
-  // `addFunctionAttributes` edited because @differentiable attribute
-  // propagation requires access to original function declaration (via
-  // SILDeclRef).
   void addFunctionAttributes(SILFunction *F, DeclAttributes &Attrs,
                              SILModule &M, SILDeclRef constant = SILDeclRef());
 };
